Create Modal template

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
   
+  <div class="container">
+    <h2>Let's Create A Modal</h2>
+    <p>Click below to open the popup modal</p>
+    <button id="modalBtn" class="container__btn">Open Modal</button>
+  </div>
 
+  <div id="modal" class="modal">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptatem animi, dolor reiciendis placeat asperiores doloremque quasi nulla veritatis quod?</p>
+    <span id="closeModal" class="modal__close">X</span>
+  </div>
 
   <script src="scripts/app.js"></script>
 </body>
