Add closeModal fn

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div id="modal" class="modal">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptatem animi, dolor reiciendis placeat asperiores doloremque quasi nulla veritatis quod?</p>
-    <span id="closeModal" class="modal__close">X</span>
+    <span id="closeModalBtn" class="modal__close">X</span>
   </div>
 
   <script src="scripts/app.js"></script>
