--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <button id="modalBtn" class="container__btn">Open Modal</button>
   </div>
 
-  <div id="modal" class="modal">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptatem animi, dolor reiciendis placeat asperiores doloremque quasi nulla veritatis quod?</p>
-    <span id="closeModalBtn" class="modal__close">X</span>
+  <div class="modal-container">
+    <div id="modal" class="modal">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptatem animi, dolor reiciendis placeat asperiores doloremque quasi nulla veritatis quod?</p>
+      <span id="closeModalBtn" class="modal__close">X</span>
+    </div>
   </div>
 
   <script src="scripts/app.js"></script>
